acrescimo do titulo dos arquivos index

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
-<html>
+html>
   <head>
 	<title> versionamento com git</title>
   </head>
+    <body>
+      <h1>Turma 3
+      </h1>
+    </body>
 </html>
-body{background: #334F
+
